tests/unit/default/syntax-error/002-create.x.t
---- IN ----
+|
---- OUT ----
---- ERR ----
syntax: expected <table> , `PK` , `U` , `I` or `FK` after `+` near `|` at position 1 - at line 1
---- EXIT ----
1
